Fix visible scrollbar when there is no scrollable content

--- a/src/warp.scss
+++ b/src/warp.scss
@@ -404,6 +404,7 @@ $desktop-view-column-width: 245px;
 
         > li.warp-menu-logout-placeholder {
           border: 0;
+          padding: 0;
 
           > div {
             height: calc(1.66666em + 1.75em);
